@@ -38,20 +38,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|fs
-operator|.
-name|CommonConfigurationKeysPublic
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|io
 operator|.
 name|Text
@@ -274,27 +260,17 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|LinkedHashSet
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Set
 import|;
 end_import
 
@@ -1227,14 +1203,14 @@ operator|+
 name|line
 argument_list|)
 expr_stmt|;
-name|Set
+name|ArrayList
 argument_list|<
 name|String
 argument_list|>
 name|groups
 init|=
 operator|new
-name|LinkedHashSet
+name|ArrayList
 argument_list|<
 name|String
 argument_list|>
