@@ -458,6 +458,10 @@ Release 2.5.0 - UNRELEASED
     HADOOP-10517. InputStream is not closed in two methods of JarFinder.
     (Ted Yu via cnauroth)
 
+    HADOOP-10581. TestUserGroupInformation#testGetServerSideGroups fails
+    because groups stored in Set and ArrayList are compared. 
+    (Mit Desai via kihwal)
+
 Release 2.4.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
